public/stylesheets/style.css
/*
	My Custome Stylesheet
	
*/

/* First, pull in Bootstrap's stylesheet */
@import url(bootstrap.css);

/* Now my custom styles */

body {
	padding-top: 0px;
	background-image:url(../images/bg.png)
}

section{
	position: relative;
}



#home {
	display: block;
	background-image:url(../images/lightfire2.jpg);
	background-repeat-x: no-repeat;
	background-repeat-y: no-repeat;
	background-attachment: fixed;
	background-position-x: 50%;
	background-position-y: 50%;
	background-clip: initial;
	background-color: #324A6F;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	height: auto !important; 
	min-height: 100%;
	height: 100%;
	width: 100%;
	overflow-x: hidden;
}



#home #logomain{
	display:block;
	position: relative;
	max-width: 100%;
	margin: 0 auto;
	padding-top: 10%;
	padding-left: 0;
	padding-right: 0%;
	padding-bottom: 30%;
}


.container-fluid{
	padding-top: 5px;
}

#main.container-fluid{
	padding-top: 20px;
}



@font-face {
    font-family: 'BebasNeueRegular';
    src: url('../fonts/BebasNeue-webfont.eot');
    src: url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/BebasNeue-webfont.woff') format('woff'),
         url('../fonts/BebasNeue-webfont.ttf') format('truetype'),
         url('../fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}


.hero-unit{
	background-image:url(../images/bgnoise.gif);
	text-align: center;
}

.specs{
	font-family: "Quicksand";
	font-weight: 400;
	color: #fcc;
	font-size: 15px;
	letter-spacing: .05em;
}

section {
	width: 100%;
	height: 100%;
	height: auto !important;
	min-height: 100%;
	overflow-x: hidden;
	position: relative;
}

section#specs{
	padding-top: 55px;	
}

#specssheet.row-fluid{
	padding-top: 20px;
}

section#images{
	margin-top: -20px;
	padding-top: 55px;
}

section#footers{
	margin-top: 200px;
	padding-top: 190px;
}

dl.dl-horizontal{
	font-family: "Quicksand";
	color: #fcc;
	font-size: 14px;
}



p.footer{
	color:#fcc;
	font-weight: 300;
}

p.pull-right{
	color:#aaa;
	font-weight: 300;
	font-size: 12px;
}

p#details{
	text-align: center;
}

img#footerlogo{
	display:block;
	margin-left: auto;
	margin-right: auto;
}

p#footertext{
	text-align: center;
}

#logos{
	display: block;
	position: absolute;
	  padding: 8px 20px 12px;
	  margin-left: 0px;
	  line-height: 0px;
		right: 1170px;
		top: -20px;
		width: 200px;
}

#logoh{
	display: block;
	position: absolute;
	  padding: 8px 20px 12px;
	  margin-left: 0px;
	  line-height: 0px;
		right: 1195px;
		top: -8px;
}

#footer.well{
	margin-bottom: 0px;

	padding-bottom: 0px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-moz-border-radius-bottomright: 0px;
	-moz-border-radius-bottomleft: 0px;
	border-radius: 5px;
	border-bottom-right-radius: 0px;
	border-bottom-left-radius: 0px;
}


#credits.span12{
	margin-top: 50px;
}

#contacts.span4{
	text-align: center;
}

